Fixed spacing and image

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ body {
   height: 500px;
   object-fit: cover;
   border-radius: 50%;
-  margin-right: 80px;
+  margin-right: 60px;
 }
 .content-text {
   flex: 1;
